--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,12 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   scoped_model: ^2.0.0-nullsafety.0
   firebase_core_desktop: ^0.1.1-dev.0
-
-
+  intl: ^0.17.0
+  mask_text_input_formatter: ^2.1.0
+  image_picker: ^0.8.4+6
+  font_awesome_flutter: ^9.2.0
+  firebase_storage: ^10.2.6
+  simple_rich_text: ^2.0.49
 
 dev_dependencies:
   flutter_test:
