Questionário Berlin adicionado

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.projetosono.sono">
    <application
-        android:label="sono"
+        android:label="Projeto Sono"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
