--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.test">
+    package="com.example.sono">
    <application
-        android:label="test"
+        android:label="sono"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
