--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  qr_flutter: ^4.0.0
+  screenshot: ^1.2.3
+  path_provider: ^2.0.9
+  image_gallery_saver: '^1.7.1'
+  permission_handler: ^9.2.0
+  flutter_barcode_scanner: ^2.0.0
   cupertino_icons: ^1.0.2
   firebase_core: ^1.10.0
   cloud_firestore: ^3.1.0
