--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   firebase_storage: ^10.2.6
   simple_rich_text: ^2.0.49
+  syncfusion_flutter_charts: ^20.1.61
+  path: ^1.8.1
+  file_picker: ^4.6.1
+  http: ^0.13.4
+  flutter_pdfview: ^1.0.4
+  youtube_player_flutter: ^8.1.0
 
 dev_dependencies:
   flutter_test:
