--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   http: ^0.13.4
   flutter_pdfview: ^1.0.4
   youtube_player_flutter: ^8.1.0
+  diacritic: ^0.1.3
 
 dev_dependencies:
   flutter_test:
