--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_pdfview: ^1.0.4
   youtube_player_flutter: ^8.1.0
   diacritic: ^0.1.3
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
