--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   youtube_player_flutter: ^8.1.0
   diacritic: ^0.1.3
   url_launcher: ^6.1.5
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
