--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,13 +54,15 @@ dependencies:
   simple_rich_text: ^2.0.49
   syncfusion_flutter_charts: ^20.1.61
   path: ^1.8.1
-  file_picker: ^4.6.1
   http: ^0.13.4
   flutter_pdfview: ^1.0.4
   youtube_player_flutter: ^8.1.0
   diacritic: ^0.1.3
   url_launcher: ^6.1.5
   sliding_up_panel: ^2.0.0+1
+  file_picker: ^5.0.1
+  pdf: ^3.6.4
+  syncfusion_flutter_pdfviewer: ^20.2.48-beta
 
 dev_dependencies:
   flutter_test:
