--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   file_picker: ^5.0.1
   pdf: ^3.6.4
   syncfusion_flutter_pdfviewer: ^20.2.48-beta
+  share_plus: ^4.4.0
 
 dev_dependencies:
   flutter_test:
