--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   pdf: ^3.6.4
   syncfusion_flutter_pdfviewer: ^20.2.48-beta
   share_plus: ^4.4.0
+  image_cropper: ^3.0.0
 
 dev_dependencies:
   flutter_test:
