--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,20 +37,15 @@ dependencies:
   screenshot: ^1.2.3
   path_provider: ^2.0.9
   image_gallery_saver: '^1.7.1'
-  permission_handler: ^9.2.0
   flutter_barcode_scanner: ^2.0.0
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.10.0
-  cloud_firestore: ^3.1.0
   splash_screen_view: ^3.0.0
   flutter_launcher_icons: ^0.9.2
   scoped_model: ^2.0.0-nullsafety.0
-  firebase_core_desktop: ^0.1.1-dev.0
   intl: ^0.17.0
   mask_text_input_formatter: ^2.1.0
   image_picker: ^0.8.4+6
   font_awesome_flutter: ^9.2.0
-  firebase_storage: ^10.2.6
   simple_rich_text: ^2.0.49
   syncfusion_flutter_charts: ^20.1.61
   path: ^1.8.1
@@ -66,6 +61,11 @@ dependencies:
   share_plus: ^4.4.0
   image_cropper: ^3.0.0
   shared_preferences: ^2.0.15
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  cloud_firestore: ^4.1.0
+  firebase_storage: ^11.0.6
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
