--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   cloud_firestore: ^4.1.0
   firebase_storage: ^11.0.6
   permission_handler: ^10.2.0
+  flutter_phoenix: ^1.1.0
 
 dev_dependencies:
   flutter_test:
